--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div id="header" align="center">
 <h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
 </div>
-
+ <body style="background-color:#1c87c9;">
 <h2> Here are some things about me</h2>
 
 <t>My name is willie pirri</t>
