--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
  <font color="blue">
 <div id="header" align="center">
-<h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
+<title>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></title>
 </div>
  <body style="background-color:#474747;">
 <h2> Here are some things about me</h2>
