--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
  <body style="background-color:#474747;">
 <h2> Here are some things about me</h2>
 
-<t>My name is willie pirri</t>
+<p1>My name is willie pirri</p1>
 
-<t>Languages:   Currently I'm working on Improving my C# knowledge, Learning python, HTML, and CSS</t>
+<p2>Languages:   Currently I'm working on Improving my C# knowledge, Learning python, HTML, and CSS</p2>
 
-<t>I am Thirteen years old so I'm still in school. I am a XR devoloper in unity, I'm trying to get Into more general and web devoloping</t>
-<t> some of my hobbies that I have when I'm not programing and in school are. I like Gaming, I listen to music, watch anime, and more
+<p3>I am Thirteen years old so I'm still in school. I am a XR devoloper in unity, I'm trying to get Into more general and web devoloping</p3>
+<p3> some of my hobbies that I have when I'm not programing and in school are. I like Gaming, I listen to music, watch anime, and more
 
 
 
