--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
  <font color="#6b84ff">
 <div id="header" align="center">
-<title>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></title>
+<h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
 </div>
  <body style="background-color:#474747;">
 <h2> Here are some things about me</h2>
