starting nav bar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
 <body>
+ <Head>      
+<Title>     
+Make a Navigation Bar  
+</Title>  
+<style type=text/css>   
+    
+ 
+</style>   
+</Head>  
+ <nav>
+  <ui>
+   <Ii>
+    <a href="#">Home</a>
+   </Ii>
+   <Ii>
+    <a href="#">About</a>
+   </Ii>
+  </ui> 
+ </nav>
+ 
+ 
  <font color="#6b84ff">
 <div id="header" align="center">
 <h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
