--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html>
 <body>
-
- 
-</style>   
+<Head>
+<Title>
+ Nav Bar
+ </Title>
+ <style type=text/css>
+body
+ {
+  height: 125vh;  
+margin-top: 80px;  
+padding: 30px;  
+background-size: cover;  
+font-family: sans-serif;  
+  }
+  header {  
+background-color: orange;  
+position: fixed;  
+left: 0;  
+right: 0;  
+top: 5px;  
+height: 30px;  
+display: flex;  
+align-items: center;  
+box-shadow: 0 0 25px 0 black;  
+}  
+  header * {  
+display: inline;  
+}  
+header li {  
+margin: 20px;  
+}  
+header li a {  
+color: blue;  
+text-decoration: none;  
+}  
+ </style>   
 </Head>  
+ 
+ <Body>
+ <header> 
  <nav>
-  <ui>
+  <uI>
    <Ii>
     <a href="#">Home</a>
    </Ii>
    <Ii>
     <a href="#">About</a>
    </Ii>
-  </ui> 
+  </uI> 
  </nav>
  
  
