added some navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <div id="header" align="center">
 <h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
 </div>
+
+<nav>
+<ul>
+    <li>
+        <a href="index.html">Home</a>
+    </li>
+    <li>
+        <a href="about.html">About</a>
+    </li>
+</ul>
+</nav>
+
+
  <body style="background-color:#474747;">
 <h2> Here are some things about me</h2>
 
@@ -14,7 +27,7 @@
 Languages:Currently I'm working on Improving my C# knowledge, Learning python, HTML, and CSS<br>
 I am Thirteen years old so I'm still in school. I am a XR devoloper in unity, I'm trying to get Into more general and web devoloping
  some of my hobbies that I have when I'm not programing and in school are. I like Gaming, I listen to music, watch anime, and more.<br>you can reach me at
- williebackup27@gmail.com</p>
+ <a href="https://williebackup27@gmail.com">"here"</a>.</p>
 
 
 
