Updated about page, and started working on contact methods

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
 </div>
 
+
+<div class=" navbar">
 <nav>
 <ul>
     <li>
@@ -18,16 +20,21 @@
     </li>
 </ul>
 </nav>
+</div>
 
 
+<div class="container">
+    <h2>here must be title</h2>
+
+    
  <body style="background-color:#474747;">
-<h2> Here are some things about me</h2>
 
-<p1>My name is willie pirri<br>
-Languages:Currently I'm working on Improving my C# knowledge, Learning python, HTML, and CSS<br>
-I am Thirteen years old so I'm still in school. I am a XR devoloper in unity, I'm trying to get Into more general and web devoloping
- some of my hobbies that I have when I'm not programing and in school are. I like Gaming, I listen to music, watch anime, and more.<br>you can reach me at
- <a href="https://williebackup27@gmail.com">"here"</a>.</p>
+<p> Welcome to my site this is mostly a portfolio/Resume for myself and outside of School working
+    <br>
+    <br>
+    If you see any thing you like and or any feedback you can message through provided contacts on the contacts page or email me at<br>
+     <a href="mailto:williebackup27@gmail.com">"williebackup27@gmail.com"</a>
+</p>
 
 
 
