--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+
+    <h1> Here are some things about me</h1>
+
+    <p1>My name is willie pirri<br>
+        Languages:Currently I'm working on Improving my C# knowledge, Learning python, HTML, and CSS<br>
+        I am Thirteen years old so I'm still in school. I am a XR devoloper in unity, I'm trying to get Into more general and web devoloping
+         some of my hobbies that I have when I'm not programing and in school are. I like Gaming, I listen to music, watch anime, and more.<br>you can reach me at
+         <a href="https://williebackup27@gmail.com">"here"</a>.</p>
+
+
+
+
+</body>
+</html>
