--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
+<section>
 
 
     <h1> Here are some things about me</h1>
@@ -14,5 +12,4 @@
 
 
 
-</body>
-</html>
+</section>
