--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="This is a portfolio/resume for myself">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class=" navbar">
 <nav>
