--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <div class="container">
-    <h2>here must be title</h2>
+    <h2>Welcome</h2>
 
     
  <body style="background-color:#474747;">
