--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
  <font color="#6b84ff">
 <div id="header" align="center">
 <h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
-</div>
+
 
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="This is a portfolio/resume for myself">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div class=" navbar">
+    <link rel="stylesheet" href="styles.css">
 <nav>
 <ul>
-    <li>
-        <a href="index.html">Home</a>
-    </li>
-    <li>
-        <a href="about.html">About</a>
-    </li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
 </ul>
 </nav>
-</div>
+
 
 
 <div class="container">
