Changed a Index.html and some of the styles

--- a/index.html
+++ b/index.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<html>
-<body>
-
- 
- <font color="#6b84ff">
-<div id="header" align="center">
-<h1>Hello World  <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/></h1>
-
-
-<meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="This is a portfolio/resume for myself">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-<nav>
-<ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-</ul>
-</nav>
+    <title>Willies portfolio</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+        <nav>
+          <ul class="nav__links">
+            <li><a href="index.html">Home</a></li>
+             <li><a href="#">Projects</a></li>
+             <li><a href="#">Contacts</a></li>
+             <li><a href="#">Github</a></li>
+              <li><a href="#">Scores</a></li>
+              <li><a href="#">Music</a></li>
+          </ul>
+        </nav>
+        <a class="cta" href="More"><button>Sign up</button></a>
+
+      
+    </header>
+
+<h2>Welcome to My portfolio</h2>
 
 
 
-<div class="container">
-    <h2>Welcome</h2>
-
-    
- <body style="background-color:#474747;">
-
-<p> Welcome to my site this is mostly a portfolio/Resume for myself and outside of School working
-    <br>
-    <br>
-    If you see any thing you like and or any feedback you can message through provided contacts on the contacts page or email me at<br>
-     <a href="mailto:williebackup27@gmail.com">"williebackup27@gmail.com"</a>
-</p>
 
 
-
-
-</body>
+  </body>
 </html>
