applied font to h2

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           <ul class="nav__links">
             <li><a href="index.html">Home</a></li>
              <li><a href="#">Projects</a></li>
-             <li><a href="#">Contacts</a></li>
-             <li><a href="#">Github</a></li>
+             <li><a href="https://github.com/Williepdev">Github</a></li>
               <li><a href="#">Scores</a></li>
               <li><a href="#">Music</a></li>
+              <li><a href="#">about</a></li>
           </ul>
         </nav>
-        <a class="cta" href="More"><button>Sign up</button></a>
+        <a class="cta" href="#"><button>Contacts and More</button></a>
 
       
     </header>
