--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
              <li><a href="https://github.com/Williepdev">Github</a></li>
               <li><a href="#">Scores</a></li>
               <li><a href="#">Music</a></li>
-              <li><a href="#">about</a></li>
+              <li><a href="about.html">about</a></li>
           </ul>
         </nav>
         <a class="cta" href="#"><button>Contacts and More</button></a>
