--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="class.css" />
   </head>
   <body>
     <header>
@@ -19,28 +20,8 @@
               <li><a href="pages/about.html">about</a></li>
           </ul>
         </nav>
-        <a class="cta" href="#"><button>Contacts and More</button></a>
-
-      
+        <a class="cta" href="#"><button>Contacts and More</button></a>      
     </header>
-
-<section>
 
 
     <h2> Here are some things about me</h2>
-
-
-    <p1>
-        Hey I am Willie Pirri,
-        I am a student attending a middle school in Connecticut,
-
-
-
-
-
-    </p1>
-
-
-
-
-</section>
