--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="class.css" />
   </head>
   <body>
     <header>
