--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
     <header>
         <nav>
           <ul class="nav__links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
              <li><a href="pages/Projects.html">Projects</a></li>
              <li><a href="https://github.com/Williepdev">Github</a></li>
               <li><a href="pages/Scores.html">Scores</a></li>
@@ -24,22 +25,5 @@
 
       
     </header>
-<html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
