--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,3 +26,5 @@
 
 
     <h2> Here are some things about me</h2>
+  
+    </html>
