removed all refrences of pages folder due to the pages folder interfearing with the styles sheet being linked

--- a/Music.html
+++ b/Music.html
@@ -12,11 +12,11 @@
         <nav>
           <ul class="nav__links">
             <li><a href="index.html">Home</a></li>
-             <li><a href="pages/Projects.html">Projects</a></li>
+             <li><a href="Projects.html">Projects</a></li>
              <li><a href="https://github.com/Williepdev">Github</a></li>
-              <li><a href="pages/Scores.html">Scores</a></li>
-              <li><a href="pages/Music.html">Music</a></li>
-              <li><a href="pages/about.html">about</a></li>
+              <li><a href="Scores.html">Scores</a></li>
+              <li><a href="Music.html">Music</a></li>
+              <li><a href="about.html">about</a></li>
           </ul>
         </nav>
         <a class="cta" href="#"><button>Contacts and More</button></a>
