added content to page

--- a/Music.html
+++ b/Music.html
@@ -23,13 +23,16 @@
 
       
     </header>
-<h1>Music</h1>
-
+<h2>Music</h2>
 
 <section>
+<P>I'm a trombonist that plays for my middle schools concert band, Honor band,<br> and in the fall of 2023 will tryout for my schools jazz band.<br>
+I also just auditioned for and made Shorline Youth Concert Orchestra.<br> In the fall I will also be auditioning for CMEA Jazz or concert band (not decided yet)<br>
+I am playing scores that are grades 1.5-2.5 Most songs I play will be Cited on this site.</P>
 
-
-
+<p>2022-2023 Semester 1 songs from concert band: <a href="https://www.jwpepper.com/Hocus-Pocus/10312257.item">Hocus Pocus Composed by Robert E. Foster, jr</a> Grade .5, <a href="https://www.jwpepper.com/Ascension/10311840.item">Ascension (fanfare for band), Composed by James Swearingen</a> Grade 1.0, <a href="https://www.jwpepper.com/Fanfare-for-a-Celebration/10757617.item">Fanfare for a Celebration, Composed by Bruce Pearson</a><br>
+2022-2023 Semester 2 Honor Band songs(did not join until S2): <a href="https://www.jwpepper.com/The-Song-of-the-Blacksmith/10279401.item">The Song of the Blacksmith (Second Suite in F, 3rd Movement) Composed by Gustav Holst, Arranged by Loest</a> Grade 2.5 <a href="https://www.jwpepper.com/Fragile/11400079.item">Fragile Composed by Randall Standridge,</a> Grade 2.0, <a href="https://www.jwpepper.com/Jungle-Dance/10279417.item">Jungle-Dance by Brian Balmages</a> Grade 2.5,
+</p>
 
 
 
